[package]
name = "nostr-ots"
description = "Implementation of NIP-03: OpenTimestamps Attestations for Events"
version = "0.2.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
license = "MIT"
repository = "https://github.com/RCasatta/nostr-ots"
edition = "2021"


[dependencies]
base64 = "0.21.0"
bitcoin_hashes = "0.11.0"
opentimestamps = "0.1.2"
thiserror = "1.0.38"
ureq = "2.6.2"
